implement epitope similarity regularization (#128)
* implement epitope similarity regularization option

* add test for epitope similarity regularization gradient

* add dataset for mAb cocktail deep mutational scanning

* add nb testing epitope similarity regularization on cocktail dms dataset

* test epitope similarity regularization on simulated RBD dataset

* add epitope similarity regularization eqs to docs

* remove numerical output in gradient test to pass pytest

* ignore nbval output

* black formatting

* more formatting

* update black formatting

* fix equations

* harmonize code -> equation

* update optimization docs

* make reg_similarity more efficient

* black formatting

* fix naming

* some updated to `Polyclonal._reg_similarity`

Updates:

 - just define `reg` and `dreg` in one step, they don't need to be defined and then have a `+=`
 - add a few clarifying `assert` statements
 - build `norm_expanded` in a way that does not assume that `beta` values for the same site are all consecutive in `betas` (this is not guaranteed and is a `BinaryMap` implementation detail) but rather uses the actual indices defined in `_binary_sites`

* remove fit_RBD_regsimilarity nb

* tidy up real mAb cocktail nb

* update version and CHANGELOG

Co-authored-by: jbloom <jbloom@fredhutch.org>

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -8,11 +8,7 @@
     "# Details on fitting\n",
     "Here we describe how the `polyclonal` package actually fits the models.\n",
     "\n",
-    "The basic idea is to minimize the difference between the predicted and measured variant-level escape probabilities, $p_v\\left(c\\right)$, using a loss function that is not overly sensitive to outliers.\n",
-    "In addition, by default there is regularization:\n",
-    "\n",
-    " 1. The mutation escape values $\\beta_{m,e}$ to capture the idea that most mutations should not mediate escape at most sites.\n",
-    " 2. The spread on mutation escape values at each site to capture the idea that different mutations at the same site should have similar-ish effects on escape.\n",
+    "The basic idea is to minimize the difference between the predicted and measured variant-level escape probabilities, $p_v\\left(c\\right)$, using a loss function that is not overly sensitive to outliers. In addition, there is regularization to encourage parameters to behave under biologically motivated constraints. \n",
     "\n",
     "## Implementation\n",
     "The fitting is implemented in the `Polyclonal.fit` function, which allows adjustment of the weights for the regularization.\n",
@@ -50,7 +46,8 @@
     "\n",
     " 1. Most mutations should not mediate escape,\n",
     " 2. When a site is involved in escape for a given epitope, most mutations at a site will have similar-ish effects.\n",
-    " 3. Epitope activities should be small (or negative) except when clear evidence to the contrary.\n",
+    " 3. A site involved in escape should only mediate escape from a single epitope.\n",
+    " 4. Epitope activities should be small (or negative) except when clear evidence to the contrary.\n",
     "\n",
     "### Regularization of escape values \n",
     "We regularize the escape values $\\beta_{m,e}$ using a simple Pseudo-Huber function, so that\n",
@@ -61,6 +58,11 @@
     "We regularize the variance of the escape values at each site, so that\n",
     "$$R_{\\rm{spread}} = \\lambda_{\\rm{spread}} \\sum_{e,i} \\frac{1}{M_i}\\sum_{m \\in i}\\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)^2$$\n",
     "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$.\n",
+    "\n",
+    "### Regularization of similarity of escape values at each site across epitopes\n",
+    "We regularize the similarity of escape values $\\beta_{m,e}$ at each site across epitopes, so that\n",
+    "$$ R_{\\rm{similarity}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
+    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$. \n",
     "\n",
     "### Regularization of epitope activities\n",
     "We regularize the epitope activities $a_{\\rm{wt}, e}$ the wildtype activities so that the regularization is 0 when the activity is negative and a Pseudo-Huber function when the activity is positive, so that\n",
@@ -177,12 +179,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "160d1b13-c2a8-41ea-bce3-3485a4c7f3a5",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{similarity}}}{\\partial \\beta_{m,e}}$\n",
+    "$$ \\frac{\\partial{R_{\\rm{similarity}}}}{\\partial{\\beta_{m,e}}} = 2\\lambda_{\\rm{similarity}} \\beta_{m,e} \\sum_{j \\neq e} \\sum_{m' \\in S_k}\\left(\\beta_{m',j}^2\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4faa44e7-c8e6-4016-8ffc-cacd523da8c0",
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}}$\n",
     "\n",
-    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} = \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ \\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0 \\end{cases}$$"
+    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} = \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ \n",
+    "\\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0 \\end{cases}$$"
    ]
   },
   {
@@ -197,14 +209,6 @@
     "Finally, the fit parameters or predictions from the models are summarized.\n",
     "Note that mutations may not be present in some bootstrap replicates if they are only in a few variants, and this can be assessed by looking at the `frac_boostrap_replicates` column in the output from `PolyclonalBootstrap`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11a6eb63-32fa-4e49-8faf-7b103c24e9ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -223,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
