--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -18,13 +18,6 @@
    "execution_count": 1,
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:29.252123Z",
-     "iopub.status.busy": "2021-12-31T20:05:29.251757Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.395537Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.394451Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:29.252037Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -131,13 +124,6 @@
    "execution_count": 2,
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.399056Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.398897Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.428300Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.427616Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.399034Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -211,13 +197,6 @@
    "execution_count": 3,
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.432591Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.432338Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.532946Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.532285Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.432568Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -282,13 +261,6 @@
    "execution_count": 4,
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.536080Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.535856Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.544610Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.544011Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.536060Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -355,13 +327,6 @@
    "execution_count": 5,
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.547370Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.547221Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.562005Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.561382Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.547349Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -417,6 +382,73 @@
     "\n",
     "    print(\"All gradients check\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed5a0e96-46b7-4720-a2bb-dc5f045ca10e",
+   "metadata": {},
+   "source": [
+    "## Gradient of epitope similarity regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_similarity(\n",
+    "        params=model._params,\n",
+    "        weight=0.2,\n",
+    "    )\n",
+    "\n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_similarity(\n",
+    "            params=model._params + eps_vec,\n",
+    "            weight=0.2,\n",
+    "        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
   }
  ],
  "metadata": {
@@ -435,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
