describe how spatial and uniqueness regularization calculated

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -47,23 +47,80 @@
     " 1. Most mutations should not mediate escape,\n",
     " 2. When a site is involved in escape for a given epitope, most mutations at a site will have similar-ish effects.\n",
     " 3. A site involved in escape should only mediate escape from a single epitope.\n",
-    " 4. Epitope activities should be small (or negative) except when clear evidence to the contrary.\n",
-    "\n",
+    " 4. Epitope activities should be small (or negative) except when clear evidence to the contrary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecea750e-7010-4615-af90-10c57823b263",
+   "metadata": {},
+   "source": [
     "### Regularization of escape values \n",
     "We regularize the escape values $\\beta_{m,e}$ using a simple Pseudo-Huber function, so that\n",
     "$$R_{\\rm{escape}} = \\lambda_{\\rm{escape}} \\sum_{m,e} h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right)$$\n",
-    "where $\\lambda_{\\rm{escape}}$ is the strength of the regularization and $\\delta_{\\rm{escape}}$ is the Psdeuo-Huber delta parameter.\n",
-    "\n",
+    "where $\\lambda_{\\rm{escape}}$ is the strength of the regularization and $\\delta_{\\rm{escape}}$ is the Psdeuo-Huber delta parameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "635cf7a7-b76b-4492-bb67-be2f7f355f51",
+   "metadata": {},
+   "source": [
     "### Regularization of spread of escape values at each site and epitope\n",
     "We regularize the variance of the escape values at each site, so that\n",
     "$$R_{\\rm{spread}} = \\lambda_{\\rm{spread}} \\sum_{e,i} \\frac{1}{M_i}\\sum_{m \\in i}\\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)^2$$\n",
-    "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$.\n",
-    "\n",
+    "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b97283dd-5895-43b1-9d99-271557b7fca7",
+   "metadata": {},
+   "source": [
     "### Regularization of similarity of escape values at each site across epitopes\n",
     "We regularize the similarity of escape values $\\beta_{m,e}$ at each site across epitopes, so that\n",
     "$$ R_{\\rm{similarity}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
-    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$. \n",
+    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c007c88-f11e-490b-8df3-1ff9ed4f4c15",
+   "metadata": {},
+   "source": [
+    "### Regularization of spatial spread of epitopes\n",
+    "To regularize the spatial spread of epitopes, we first define a differentiable measure of the average absolute value of escape at a site for an epitope $e$ as\n",
+    "$$\n",
+    "s_{r,e} = \\frac{1}{M_r} \\left(\\sqrt{\\sum_{m \\in r} \\beta_{m,e}^2 + \\epsilon} - \\sqrt{\\epsilon}\\right)\n",
+    "$$\n",
+    "where $\\epsilon$ is a small number and $m$ ranges over all mutations at site $r$.\n",
     "\n",
+    "We then further assume that we have an experimental measure of $d_{r,r'}$ of the distance between each pair of residues $r$ and $r'$.\n",
+    "\n",
+    "The regularization term is then:\n",
+    "$$\n",
+    "R_{\\rm{spatial}} = \\lambda_{\\rm{spatial}} \\sum_e \\sum_r \\sum_{r' > r} d_{r,r'} s_{r,e} s_{r',e}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9db9477-92ba-49df-9acd-eb3e5a499d84",
+   "metadata": {},
+   "source": [
+    "### Regularization of epitope uniqueness\n",
+    "To regularize to ensure epitopes contain largely unique sites, we define the following term which uses the differentiable average absolute value of escape at a site for an epitope $s_{r,e}$ defined above:\n",
+    "$$\n",
+    "R_{\\rm{uniqueness}} = \\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e'} s_{r,e} s_{r,e'}\n",
+    "$$\n",
+    "where $e$ and $e'$ range over all pairs of epitopes, and $r$ ranges over all sites."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44aa1216-b212-4209-beda-714c1feae8ec",
+   "metadata": {},
+   "source": [
     "### Regularization of epitope activities\n",
     "We regularize the epitope activities $a_{\\rm{wt}, e}$ the wildtype activities so that the regularization is 0 when the activity is negative and a Pseudo-Huber function when the activity is positive, so that\n",
     "$$R_{\\rm{activity}} = \\lambda_{\\rm{activity}} \\sum_e \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0\\end{cases} $$\n",
@@ -188,6 +245,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a200cfb3-33dd-403f-9dd0-3ed1b50120bb",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e}}$\n",
+    "$$\n",
+    "\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e'}} =\n",
+    "\\begin{cases}\n",
+    "\\frac{\\beta_{m,e'}}{M_r \\sqrt{\\sum_{m' \\in r} \\beta_{m',e'}^2 + \\epsilon}} \n",
+    "& \\rm{if\\,} m \\in r \\rm{\\, and \\,} e = e'\\\\\n",
+    "0 & \\rm{otherwise} \\\\\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "459c50e8-215d-4071-a9cd-231afe1eca59",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{spatial}}}{\\partial \\beta_{m,e}}$\n",
+    "$$\n",
+    "\\frac{R_{\\rm{spatial}}}{\\partial \\beta_{m,e}}\n",
+    "=\n",
+    "R_{\\rm{spatial}} \\sum_r \\sum_{r' > r} d_{r,r'}\n",
+    "\\left(\n",
+    "\\frac{s_{r,e}}{\\partial \\beta_{m,e}} s_{r',e} + s_{r,e} \\frac{\\partial s_{r',e}}{\\partial \\beta_{m,e}}\n",
+    "\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0707fe5-eb16-4c9a-8c40-2308509362a8",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{uniqueness}}}{\\partial \\beta_{m,e}}$\n",
+    "$$\n",
+    "R_{\\rm{uniqueness}} = \\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e'}\n",
+    "\\left(\n",
+    "\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e}} s_{r,e'} + s_{r,e} \\frac{\\partial s_{r,e'}}{\\partial \\beta_{m,e}}\n",
+    "\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4faa44e7-c8e6-4016-8ffc-cacd523da8c0",
    "metadata": {},
    "source": [
@@ -227,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
