test gradients of `Polyclonal._site_avg_abs_diff`

--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -18,6 +18,13 @@
    "execution_count": 1,
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-08T14:03:58.635254Z",
+     "iopub.status.busy": "2022-11-08T14:03:58.634448Z",
+     "iopub.status.idle": "2022-11-08T14:04:00.604410Z",
+     "shell.execute_reply": "2022-11-08T14:04:00.603401Z",
+     "shell.execute_reply.started": "2022-11-08T14:03:58.635169Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -124,6 +131,13 @@
    "execution_count": 2,
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-08T14:04:00.608060Z",
+     "iopub.status.busy": "2022-11-08T14:04:00.607827Z",
+     "iopub.status.idle": "2022-11-08T14:04:00.636558Z",
+     "shell.execute_reply": "2022-11-08T14:04:00.635812Z",
+     "shell.execute_reply.started": "2022-11-08T14:04:00.608038Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -197,6 +211,13 @@
    "execution_count": 3,
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-08T14:04:00.641032Z",
+     "iopub.status.busy": "2022-11-08T14:04:00.640753Z",
+     "iopub.status.idle": "2022-11-08T14:04:00.742150Z",
+     "shell.execute_reply": "2022-11-08T14:04:00.741386Z",
+     "shell.execute_reply.started": "2022-11-08T14:04:00.641007Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -261,6 +282,13 @@
    "execution_count": 4,
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-08T14:04:00.745134Z",
+     "iopub.status.busy": "2022-11-08T14:04:00.744987Z",
+     "iopub.status.idle": "2022-11-08T14:04:00.753697Z",
+     "shell.execute_reply": "2022-11-08T14:04:00.753086Z",
+     "shell.execute_reply.started": "2022-11-08T14:04:00.745116Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -327,6 +355,13 @@
    "execution_count": 5,
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-08T14:04:00.756600Z",
+     "iopub.status.busy": "2022-11-08T14:04:00.756448Z",
+     "iopub.status.idle": "2022-11-08T14:04:00.772185Z",
+     "shell.execute_reply": "2022-11-08T14:04:00.771526Z",
+     "shell.execute_reply.started": "2022-11-08T14:04:00.756580Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -385,6 +420,103 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2da7b583-029a-4519-8fe0-695990f54615",
+   "metadata": {},
+   "source": [
+    "## Gradient of site average absolute value (differentiable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0291ad6f-a5a3-4ad0-9bbf-e1ad66f28982",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-08T14:04:00.775164Z",
+     "iopub.status.busy": "2022-11-08T14:04:00.775014Z",
+     "iopub.status.idle": "2022-11-08T14:04:00.791656Z",
+     "shell.execute_reply": "2022-11-08T14:04:00.790953Z",
+     "shell.execute_reply.started": "2022-11-08T14:04:00.775144Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "epsilon = 0.1\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    s, ds = model._site_avg_abs_diff(model._params, epsilon)\n",
+    "\n",
+    "    # numerical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "\n",
+    "        # add a small amount to params\n",
+    "        eps_vec = numpy.zeros(model._params.shape)\n",
+    "        eps_vec[iparam] = eps\n",
+    "        s_eps, _ = model._site_avg_abs_diff(model._params + eps_vec, epsilon)\n",
+    "\n",
+    "        # figure out what beta value is being changed\n",
+    "        a_eps, beta_eps = model._a_beta_from_params(eps_vec)\n",
+    "        if (a_eps == eps).sum() == 1 and (beta_eps == eps).sum() == 0:\n",
+    "            # changing an activity should have no effect on s\n",
+    "            assert (s == s_eps).all()\n",
+    "            continue\n",
+    "        assert (a_eps == eps).sum() == 0\n",
+    "        assert (beta_eps == eps).sum() == 1\n",
+    "        i_mutation, i_epitope = numpy.where(beta_eps == eps)\n",
+    "        i_mutation = i_mutation[0]\n",
+    "        i_epitope == i_epitope[0]\n",
+    "        assert eps == beta_eps[i_mutation, i_epitope]\n",
+    "\n",
+    "        site = (\n",
+    "            model._binarymaps.binary_sites[i_mutation]\n",
+    "            if model._one_binarymap\n",
+    "            else model._binarymaps[0].binary_sites[i_mutation]\n",
+    "        )\n",
+    "        siteindex = list(model._binary_sites).index(site)\n",
+    "\n",
+    "        s_diff = (s_eps - s) / eps\n",
+    "        numerical_grad = s_diff[siteindex, i_epitope]\n",
+    "        analytical_grad = ds[i_mutation, i_epitope]\n",
+    "\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed5a0e96-46b7-4720-a2bb-dc5f045ca10e",
    "metadata": {},
    "source": [
@@ -393,9 +525,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-08T14:04:00.794535Z",
+     "iopub.status.busy": "2022-11-08T14:04:00.794381Z",
+     "iopub.status.idle": "2022-11-08T14:04:00.811773Z",
+     "shell.execute_reply": "2022-11-08T14:04:00.811064Z",
+     "shell.execute_reply.started": "2022-11-08T14:04:00.794514Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -467,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
