document spatial reg weights for lambda_1 and _2

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -99,8 +99,9 @@
     "\n",
     "The regularization term is then:\n",
     "$$\n",
-    "R_{\\rm{spatial}} = \\lambda_{\\rm{spatial}} \\sum_e \\sum_r \\sum_{r' > r} d_{r,r'} s_{r,e} s_{r',e}\n",
-    "$$"
+    "R_{\\rm{spatial}} = \\sum_e \\sum_r \\sum_{r' > r} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)s_{r,e} s_{r',e}\n",
+    "$$\n",
+    "Note how this term has weights enabling regularization on both the distances and squared distances."
    ]
   },
   {
@@ -268,7 +269,7 @@
     "$$\n",
     "\\frac{R_{\\rm{spatial}}}{\\partial \\beta_{m,e}}\n",
     "=\n",
-    "R_{\\rm{spatial}} \\sum_r \\sum_{r' > r} d_{r,r'}\n",
+    "\\sum_r \\sum_{r' > r} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)\n",
     "\\left(\n",
     "\\frac{s_{r,e}}{\\partial \\beta_{m,e}} s_{r',e} + s_{r,e} \\frac{\\partial s_{r',e}}{\\partial \\beta_{m,e}}\n",
     "\\right)\n",
