untested implementation of `Polyclonal._reg_spatial`

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -99,9 +99,10 @@
     "\n",
     "The regularization term is then:\n",
     "$$\n",
-    "R_{\\rm{spatial}} = \\sum_e \\sum_r \\sum_{r' > r} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)s_{r,e} s_{r',e}\n",
+    "R_{\\rm{spatial}} = \\frac{1}{2}\\sum_e \\sum_r \\sum_{r'} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)s_{r,e} s_{r',e}\n",
     "$$\n",
-    "Note how this term has weights enabling regularization on both the distances and squared distances."
+    "Note how this term has weights enabling regularization on both the distances and squared distances.\n",
+    "The factor of $\\frac{1}{2}$ is to avoid double counting pairs, noting that the diagonal elements are always zero since the self distances are zero."
    ]
   },
   {
@@ -269,11 +270,15 @@
     "$$\n",
     "\\frac{R_{\\rm{spatial}}}{\\partial \\beta_{m,e}}\n",
     "=\n",
-    "\\sum_r \\sum_{r' > r} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)\n",
+    "\\frac{1}{2}\\sum_r \\sum_{r'} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)\n",
     "\\left(\n",
     "\\frac{s_{r,e}}{\\partial \\beta_{m,e}} s_{r',e} + s_{r,e} \\frac{\\partial s_{r',e}}{\\partial \\beta_{m,e}}\n",
     "\\right)\n",
-    "$$"
+    "=\n",
+    "\\sum_r\n",
+    "\\left(\\lambda_{\\rm{spatial},1} d_{r,r_m} + \\lambda_{\\rm{spatial},2} d_{r,r_m}^2\\right) s_{r,e} \\frac{\\partial s_{r_m,e}}{\\partial \\beta_{m,e}}\n",
+    "$$\n",
+    "where $r_m$ is the site of mutation $m$."
    ]
   },
   {
@@ -283,7 +288,9 @@
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{uniqueness}}}{\\partial \\beta_{m,e}}$\n",
     "$$\n",
-    "R_{\\rm{uniqueness}} = \\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e'}\n",
+    "R_{\\rm{uniqueness}}\n",
+    "=\n",
+    "\\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e'}\n",
     "\\left(\n",
     "\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e}} s_{r,e'} + s_{r,e} \\frac{\\partial s_{r,e'}}{\\partial \\beta_{m,e}}\n",
     "\\right)\n",
