spatial regularization passes gradient tests

--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -19,11 +19,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-08T14:03:58.635254Z",
-     "iopub.status.busy": "2022-11-08T14:03:58.634448Z",
-     "iopub.status.idle": "2022-11-08T14:04:00.604410Z",
-     "shell.execute_reply": "2022-11-08T14:04:00.603401Z",
-     "shell.execute_reply.started": "2022-11-08T14:03:58.635169Z"
+     "iopub.execute_input": "2022-11-10T14:49:19.187131Z",
+     "iopub.status.busy": "2022-11-10T14:49:19.186714Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.269840Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.268980Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:19.187055Z"
     },
     "tags": []
    },
@@ -82,6 +82,11 @@
     "    columns=[\"barcode\", \"aa_substitutions\"],\n",
     ")\n",
     "\n",
+    "spatial_distances = pd.DataFrame(\n",
+    "    [(1, 2, 1.5), (1, 4, 7.5)],\n",
+    "    columns=[\"site_1\", \"site_2\", \"distance\"],\n",
+    ")\n",
+    "\n",
     "escape_probs = polyclonal_sim.prob_escape(\n",
     "    variants_df=variants_df, concentrations=[1.0, 2.0, 4.0]\n",
     ")\n",
@@ -93,6 +98,7 @@
     "models[\"same variants all concentration, not fit\"] = Polyclonal(\n",
     "    data_to_fit=data_to_fit,\n",
     "    activity_wt_df=activity_wt_df,\n",
+    "    spatial_distances=spatial_distances,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
     "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
     "        columns=[\"epitope\", \"site\", \"escape\"],\n",
@@ -104,6 +110,7 @@
     "models[\"different variants among concentrations, not fit\"] = Polyclonal(\n",
     "    data_to_fit=data_to_fit.head(len(data_to_fit) - 1),\n",
     "    activity_wt_df=activity_wt_df,\n",
+    "    spatial_distances=spatial_distances,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
     "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
     "        columns=[\"epitope\", \"site\", \"escape\"],\n",
@@ -132,11 +139,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-08T14:04:00.608060Z",
-     "iopub.status.busy": "2022-11-08T14:04:00.607827Z",
-     "iopub.status.idle": "2022-11-08T14:04:00.636558Z",
-     "shell.execute_reply": "2022-11-08T14:04:00.635812Z",
-     "shell.execute_reply.started": "2022-11-08T14:04:00.608038Z"
+     "iopub.execute_input": "2022-11-10T14:49:21.273137Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.272932Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.302339Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.301551Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.273111Z"
     },
     "tags": []
    },
@@ -212,11 +219,11 @@
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-08T14:04:00.641032Z",
-     "iopub.status.busy": "2022-11-08T14:04:00.640753Z",
-     "iopub.status.idle": "2022-11-08T14:04:00.742150Z",
-     "shell.execute_reply": "2022-11-08T14:04:00.741386Z",
-     "shell.execute_reply.started": "2022-11-08T14:04:00.641007Z"
+     "iopub.execute_input": "2022-11-10T14:49:21.306301Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.306087Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.413693Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.412781Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.306280Z"
     },
     "tags": []
    },
@@ -283,11 +290,11 @@
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-08T14:04:00.745134Z",
-     "iopub.status.busy": "2022-11-08T14:04:00.744987Z",
-     "iopub.status.idle": "2022-11-08T14:04:00.753697Z",
-     "shell.execute_reply": "2022-11-08T14:04:00.753086Z",
-     "shell.execute_reply.started": "2022-11-08T14:04:00.745116Z"
+     "iopub.execute_input": "2022-11-10T14:49:21.417232Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.416989Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.425836Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.425252Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.417211Z"
     },
     "tags": []
    },
@@ -356,11 +363,11 @@
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-08T14:04:00.756600Z",
-     "iopub.status.busy": "2022-11-08T14:04:00.756448Z",
-     "iopub.status.idle": "2022-11-08T14:04:00.772185Z",
-     "shell.execute_reply": "2022-11-08T14:04:00.771526Z",
-     "shell.execute_reply.started": "2022-11-08T14:04:00.756580Z"
+     "iopub.execute_input": "2022-11-10T14:49:21.428575Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.428416Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.444211Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.443449Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.428555Z"
     },
     "tags": []
    },
@@ -432,11 +439,11 @@
    "id": "0291ad6f-a5a3-4ad0-9bbf-e1ad66f28982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-08T14:04:00.775164Z",
-     "iopub.status.busy": "2022-11-08T14:04:00.775014Z",
-     "iopub.status.idle": "2022-11-08T14:04:00.791656Z",
-     "shell.execute_reply": "2022-11-08T14:04:00.790953Z",
-     "shell.execute_reply.started": "2022-11-08T14:04:00.775144Z"
+     "iopub.execute_input": "2022-11-10T14:49:21.447224Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.446979Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.462936Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.462342Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.447203Z"
     },
     "tags": []
    },
@@ -517,6 +524,90 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b19fd108-30ce-4f47-a434-bb4fae041a07",
+   "metadata": {},
+   "source": [
+    "## Gradient of spatial regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d471132-f3d1-419b-98e2-0e441c1a1445",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.465522Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.465382Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.480917Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.480348Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.465504Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "epsilon = 0.1\n",
+    "reg_spatial_weight = 0.1\n",
+    "reg_spatial_weight2 = 0.01\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_spatial(\n",
+    "        params=model._params,\n",
+    "        reg_spatial_weight=reg_spatial_weight,\n",
+    "        reg_spatial_weight2=reg_spatial_weight2,\n",
+    "        epsilon=epsilon,\n",
+    "    )\n",
+    "\n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_spatial(\n",
+    "            params=model._params + eps_vec,\n",
+    "            reg_spatial_weight=reg_spatial_weight,\n",
+    "            reg_spatial_weight2=reg_spatial_weight2,\n",
+    "            epsilon=epsilon,\n",
+    "        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed5a0e96-46b7-4720-a2bb-dc5f045ca10e",
    "metadata": {},
    "source": [
@@ -525,15 +616,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-08T14:04:00.794535Z",
-     "iopub.status.busy": "2022-11-08T14:04:00.794381Z",
-     "iopub.status.idle": "2022-11-08T14:04:00.811773Z",
-     "shell.execute_reply": "2022-11-08T14:04:00.811064Z",
-     "shell.execute_reply.started": "2022-11-08T14:04:00.794514Z"
+     "iopub.execute_input": "2022-11-10T14:49:21.483404Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.483272Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.495802Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.495195Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.483387Z"
     },
     "tags": []
    },
