make avg abs site escape approx RMS (before was calculated wrong)

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -91,7 +91,7 @@
     "### Regularization of spatial spread of epitopes\n",
     "To regularize the spatial spread of epitopes, we first define a differentiable measure of the average absolute value of escape at a site for an epitope $e$ as\n",
     "$$\n",
-    "s_{r,e} = \\frac{1}{M_r} \\left(\\sqrt{\\sum_{m \\in r} \\beta_{m,e}^2 + \\epsilon} - \\sqrt{\\epsilon}\\right)\n",
+    "s_{r,e} = \\sqrt{\\frac{1}{M_r} \\sum_{m \\in r} \\beta_{m,e}^2 + \\epsilon} - \\sqrt{\\epsilon}\n",
     "$$\n",
     "where $\\epsilon$ is a small number and $m$ ranges over all mutations at site $r$.\n",
     "\n",
@@ -254,7 +254,7 @@
     "$$\n",
     "\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e'}} =\n",
     "\\begin{cases}\n",
-    "\\frac{\\beta_{m,e'}}{M_r \\sqrt{\\sum_{m' \\in r} \\beta_{m',e'}^2 + \\epsilon}} \n",
+    "\\frac{\\beta_{m,e'}}{\\sqrt{M_r \\sum_{m' \\in r} \\beta_{m',e'}^2 + \\epsilon}} \n",
     "& \\rm{if\\,} m \\in r \\rm{\\, and \\,} e = e'\\\\\n",
     "0 & \\rm{otherwise} \\\\\n",
     "\\end{cases}\n",
